Backend should be working as intended now