@@ -3,13 +3,12 @@ package com.example.gamehubbackend.services;
 import com.example.gamehubbackend.models.User;
 import com.example.gamehubbackend.repositories.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +23,7 @@ public class UserDetailServiceImpl implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 user.username(),
                 user.password(),
-                Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.role()))
+                List.of()
         );
     }
 }
